@@ -3,6 +3,8 @@ LIST OF CHANGES
 
  - a new script - npg_upload2climb - to perform the upload, which is
    specified in the definition generated by the pp_archiver function
+ - required arguments are passed to the npg_upload2climb script when
+   the pp_archiver function job description is generated
 
 release 57.12.0
  - a new function definition class npg_pipeline::function::pp_archiver,
